--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,28 @@ nav ul li {
     display: inline-block;
     margin-right: 1rem;
 }
+
+body {
+    background-color: #2DDD72;
+}
+
+.row.install-wrapper {
+    margin-top: 10rem;
+}
+
+.install-form {
+    background-color: #fff;
+    padding: 1rem;
+}
+
+.footer {
+    margin-top: .5rem;
+}
+.footer,
+.footer a {
+    color: #fff;
+}
+
+.footer a {
+    text-decoration: underline;
+}
