Make minor style tweaks to make working through this a little easier

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,12 @@ body {
     padding: 1rem;
 }
 
+.latest-amounts {
+    background-color: #fff;
+    margin-top: 10rem;
+    padding: 1rem;
+}
+
 .footer {
     margin-top: .5rem;
 }
